# tech_industry_mental_health_analysis

./: README.md  eda_mental_health_in_tech_industry.ipynb  pyproject.toml
src/: utilities.py
